sdk_tests/tests/pbc_contract_codegen/fail/zk/rpc_args_not_allowed.stderr
error: custom attribute panicked
  --> tests/pbc_contract_codegen/fail/zk/rpc_args_not_allowed.rs:17:1
   |
17 | #[zk_on_variable_inputted]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: Functions annotated with this macro must have at most 4 arguments
